# dbt-cloud-column-aware-ci

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: tests.yml
src/: config.py  dbt.py  discovery_api_queries.py  logging_config.py  main.py  node.py  utils.py
src/interfaces/: __init__.py  dbt.py  discovery.py  lineage.py  orchestrator.py
src/models/: __init__.py  breaking_change.py  column_tracker.py  node.py  node_factory.py
src/services/: __init__.py  dbt_runner.py  discovery_client.py  lineage_service.py  orchestrator.py
tests/: __init__.py  conftest.py  test_config.py  test_main.py  test_node.py  test_utils.py
tests/integration/: conftest.py  test_model_changes.py
tests/models/: test_column_tracker.py  test_node.py  test_node_manager.py
tests/services/: test_dbt_runner.py  test_discovery_client.py  test_lineage_service.py  test_orchestrator.py
